--- a/src/ByteBank.Forum/Views/Shared/_Layout.cshtml
+++ b/src/ByteBank.Forum/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNet.Identity
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -24,8 +26,22 @@
                     <li>@Html.ActionLink("Criar tópico", "Criar", "Topico")</li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li>@Html.ActionLink("Registrar", "Registrar", "Conta")</li>
-                    <li>@Html.ActionLink("Login", "Login", "Conta")</li>
+                    @if (Request.IsAuthenticated)
+                    {
+
+                        using (Html.BeginForm("Logoff", "Conta", FormMethod.Post, new { id = "formulario_logoff" }))
+                        {
+
+                        }
+
+                        <p class="navbar-text"> Olá, @User.Identity.GetUserName() !</p>
+                        <li><a href="javascript:document.getElementById('formulario_logoff').submit()">Sair</a></li>
+                    }
+                    else
+                    {
+                        <li>@Html.ActionLink("Registrar", "Registrar", "Conta")</li>
+                        <li>@Html.ActionLink("Login", "Login", "Conta")</li>
+                    }
                 </ul>
             </div>
         </div>
